--- a/src/App.css
+++ b/src/App.css
@@ -97,3 +97,24 @@ button:hover {
   border-radius: 8px;
   background-color: rgba(255, 255, 255, 0.8);
 }
+
+.loader {
+  width: 20px;
+  aspect-ratio: 1 / 1;
+  border: 2px solid black;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  margin-left: 10px;
+  }
+
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+  } 
